[package]
name = "poe"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "poe"

[dependencies]
futures = "0.3"
wasmbus-rpc = "0.13"
wasmcloud-interface-httpserver = "0.10"
tokio = { version = "1", features = ["full"] }


[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
